--- a/CSS3/default.css
+++ b/CSS3/default.css
@@ -1,3 +1,23 @@
 /*
-
+css3の値指定方法
+- 長さ
+　- px, em, %, rem
 */
+
+html{
+	font-size: 32px;
+}
+
+h1 {
+	/*font-size: 2em;*/
+	/* 64px */ 
+	font-size: 2rem;
+	/* 64px */
+}
+
+span {
+	/*font-size: 0.5em;*/
+	/* 32px */	
+	font-size: 0.5rem;
+	/* 16px */
+}
