--- a/CSS3/default.css
+++ b/CSS3/default.css
@@ -1,23 +1,147 @@
+
+
+/*#2*/
+
 /*
 css3の値指定方法
 - 長さ
 　- px, em, %, rem
 */
-
+/*
 html{
 	font-size: 32px;
 }
-
+*/
+/*
 h1 {
-	/*font-size: 2em;*/
-	/* 64px */ 
+	font-size: 2em;
 	font-size: 2rem;
-	/* 64px */
+}
+*/
+
+/*
+span {
+	font-size: 0.5em;
+	font-size: 0.5rem;
+}
+*/
+
+
+/*#3*/
+
+/*
+色
+- rgba
+ - Red
+ - Green
+ - Blue
+ - Alpha(0-1)
+
+- hsl/hsla
+ - Hue 0-360
+ - Saturation 0-100%
+ - Lightness 0-100%
+ - Alpha(0-1)
+
+*/
+
+/*
+div{
+	width: 100px;
+	height: 50px;
+
 }
 
-span {
-	/*font-size: 0.5em;*/
-	/* 32px */	
-	font-size: 0.5rem;
-	/* 16px */
+#box1 {
+	background: rgb(255, 100, 100);
+}
+
+#box2 {
+	background: rgba(255, 100, 100, .2);
+}
+
+#box3 {
+	background: hsla(210, 100%, 50%, .7);
+}
+
+#box4 {
+	background: hsla(210, 100%, 40%, .7);
+}
+*/
+
+
+/*#4*/
+
+/*
+opacity
+*/
+/*
+body {
+	background: skyblue;
+}
+
+img {
+	border: 7px solid blue;
+	opacity: 0.3;
+}
+*/
+
+
+/*#5*/
+
+/*
+属性セレクタ
+-a[href]
+-a[href="foo"]
+-a[href~="foo"]
+
+-a[href^="foo"]fooから始まる
+-a[href$="foo"]fooで終わる
+-a[href*="foo"]fooを含む
+
+
+*/
+
+/*a[href^="http"]{
+	color: orange;
+}
+*/
+
+/*
+a[href*=".com"]{
+	color: orange;
+}
+*/
+
+
+/*#5*/
+
+/*
+擬似クラス
+- :first-child
+- :last-child
+*/
+
+/*li:nth-child(3)*/
+/*li:nth-child(odd)*/
+/*li:nth-child(even)*/
+/*li:nth-child(3n+1)*/
+/*li:nth-last-child(4)*/
+/*li:only-child
+{
+	background: violet;
+}*/
+
+/*
+擬似クラス
+
+*/
+
+/*p:first-of-type*/
+  /*p:last-of-type*/ 
+  /*p:nth-of-type(3)*/
+  /*p:nth-last-of-type(4)*/
+  h2:only-of-type
+  {
+	background: violet;
 }
