--- a/CSS3/default.css
+++ b/CSS3/default.css
@@ -286,7 +286,7 @@ h1 {
 }
 */
 
-/*#15*/
+/*#15,#16*/
 
 /*
 変形
@@ -327,9 +327,110 @@ h1 {
 
 }*/
 
-/*#16*/
+
+/*#17*/
+
+/*
+transition
+
+transition-timing-function
+- ease
+- linear
+- ease-in
+- ease-out
+- ease-in-out
+*/
+
+/*div {
+	width: 100px;
+	height: 50px;
+	background: skyblue;*/
+
+/*	transition-delay:all;
+	transition-duration:2s;
+	transition-timing-function:ease; 
+	transition-delay:0.8s; */
+/*	transition: all 2s ease 0.8s;
+}
+
+div:hover{
+	width: 200px;
+	height: 50px;
+	background: blue;
+}*/
+
+/*#18*/
+
+/*
+animation
+*/
+
+/*
+div {
+	width: 50px;
+	height: 50px;
+	background: skyblue;
+
+	-webkit-animation-name: slidein;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-timing-function: ease;
+	-webkit-animation-delay: .1s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: alternate;
+
+}	
+
+@-webkit-keyframes slidein {
+	0%{
+		margin-left: 100%;
+		background: white;
+	}
+	70%{
+		margin-left: 50%;
+		background: blue;
+	}
+	100%{
+		margin-left: 0%;
+	}
+
+}
+*/
 
 
+/*19*/
+
+/*
+width/height
+- box-sizing
+*/
+
+body{
+margin: 0;
+padding: 0;
+}
+
+.container{
+	width: 320px;
+	height: 100px;
+	background: skyblue;
+
+}
+
+.box{
+	box-sizing: border-box;
+	width: 100px;
+	height: 100px;
+	background: #eee;
+	float: left;
+
+	padding: 10px;
+	border-bottom: 30px solid #ccc;
+}
+
+.box + .box{
+	margin-left: 10px;
+}
 
 
 
